--- a/talk2meair/Emotions.storyboard
+++ b/talk2meair/Emotions.storyboard
@@ -23,18 +23,27 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" hint="This button goes to the people screen" label="People Button"/>
                                 <state key="normal" image="people-btn"/>
+                                <connections>
+                                    <segue destination="SSQ-md-PDS" kind="show" id="gdX-Py-5sW"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NAX-lW-xx4" userLabel="food-btn">
                                 <rect key="frame" x="0.0" y="229" width="100" height="103"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" hint="This button goes to the food screen" label="Food Button"/>
                                 <state key="normal" backgroundImage="food-btn"/>
+                                <connections>
+                                    <segue destination="eYe-1R-i3k" kind="show" id="OUd-jP-U0E"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DOi-Q3-2ek" userLabel="home-btn">
                                 <rect key="frame" x="0.0" y="21" width="100" height="95"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" hint="This button goes to the home screen" label="Home button"/>
                                 <state key="normal" backgroundImage="home-btn"/>
+                                <connections>
+                                    <segue destination="PHC-gP-1lr" kind="show" id="ISC-j9-RiD"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Talk T'Me" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3qP-Hc-0tO" userLabel="app-name">
                                 <rect key="frame" x="99" y="20" width="925" height="85"/>
@@ -49,24 +58,36 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" hint="This button goes to the places screen" label="Places Button"/>
                                 <state key="normal" backgroundImage="places-btn"/>
+                                <connections>
+                                    <segue destination="btG-AF-y2N" kind="show" id="qcV-wZ-Qqa"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nKQ-gJ-FsF" userLabel="emotions-btn">
                                 <rect key="frame" x="0.0" y="432" width="100" height="103"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" hint="This button goes to the emotions screen" label="Emotions Button"/>
                                 <state key="normal" backgroundImage="emotions-btn"/>
+                                <connections>
+                                    <segue destination="kFA-kt-tdJ" kind="show" id="mGo-Td-MZc"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Epm-Y4-MFG" userLabel="colors-btn">
                                 <rect key="frame" x="0.0" y="531" width="100" height="103"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" hint="This button goes to the colors screen" label="Colors Button"/>
                                 <state key="normal" backgroundImage="colors-btn"/>
+                                <connections>
+                                    <segue destination="jCK-EL-aHf" kind="show" id="Pxg-ih-iVn"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gxT-td-AdA" userLabel="numbers-btn">
                                 <rect key="frame" x="0.0" y="632" width="100" height="103"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" hint="This button goes to the numbers screen" label="Numbers Button"/>
                                 <state key="normal" backgroundImage="numbers-btn"/>
+                                <connections>
+                                    <segue destination="n7V-5F-MXd" kind="show" id="ji3-Uj-a1P"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e4z-v3-zuj" userLabel="happy-btn">
                                 <rect key="frame" x="190" y="190" width="151" height="142"/>
@@ -111,6 +132,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5tl-cN-qI2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="38.671875" y="50.78125"/>
+        </scene>
+        <!--homeViewController-->
+        <scene sceneID="yl8-Ut-5Iw">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Main" referencedIdentifier="homeViewController" id="PHC-gP-1lr" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Szf-QR-pFX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-234" y="-452"/>
+        </scene>
+        <!--peopleViewController-->
+        <scene sceneID="SWI-eV-trN">
+            <objects>
+                <viewControllerPlaceholder storyboardName="People" referencedIdentifier="peopleViewController" id="SSQ-md-PDS" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4kg-1F-KCM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-231" y="-424"/>
+        </scene>
+        <!--colorsViewController-->
+        <scene sceneID="IZl-sY-yd5">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Colors" referencedIdentifier="colorsViewController" id="jCK-EL-aHf" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T8Q-fk-Vsg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-123" y="-451"/>
+        </scene>
+        <!--numbersViewController-->
+        <scene sceneID="i0L-Wm-59O">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Numbers" referencedIdentifier="numbersViewController" id="n7V-5F-MXd" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pXM-Jx-eTm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-123" y="-419"/>
+        </scene>
+        <!--foodViewController-->
+        <scene sceneID="oST-FT-hki">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Food" referencedIdentifier="foodViewController" id="eYe-1R-i3k" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C6L-o3-LuO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-234" y="-396"/>
+        </scene>
+        <!--placesViewController-->
+        <scene sceneID="REN-iK-ifP">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Places" referencedIdentifier="placesViewController" id="btG-AF-y2N" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t9Y-oc-2Vw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-231" y="-364"/>
+        </scene>
+        <!--emotionsViewController-->
+        <scene sceneID="jeU-Iw-XRx">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Emotions" referencedIdentifier="emotionsViewController" id="kFA-kt-tdJ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kZF-Kh-02e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-231" y="-331"/>
         </scene>
     </scenes>
     <resources>
