--- a/talk2meair/People.storyboard
+++ b/talk2meair/People.storyboard
@@ -32,6 +32,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" hint="This button goes to the food screen" label="Food Button"/>
                                 <state key="normal" backgroundImage="food-btn"/>
+                                <connections>
+                                    <segue destination="LpT-oG-Wav" kind="show" id="2fp-pb-vIp"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PG5-an-5F0" userLabel="places-btn">
                                 <rect key="frame" x="0.0" y="329" width="100" height="103"/>
